<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="rega">Регистрация</string>
    <string name="NAME">Имя пользователя</string>
    <string name="ADRES">Адрес электронной почты</string>
    <string name="PASSWORD">Пароль</string>
    <string name="ENTER">Войти</string>
    <string name="PROF">Профиль пользователя</string>
    <string name="NOTENTER">Вход не выполнен</string>
    <string name="avatar">AVATAR</string>
    <string name="Settings">Настройки</string>
    <string name="Settings2">Настройки2</string>
    <string name="DATA">Дата и время</string>
    <string name="soundSETTINGS">Настройеи звука</string>
    <string name="CHECKUPDATES">Проверить обновления</string>
    <string name="avatarik">avatarik</string>
    <string name="perehod">perehod</string>
    <string name="perehod2">perehod2</string>
    <string name="perehod3">perehod3</string>
    <string name="perehod4">perehod4</string>
    <string name="panel">panel</string>
    <string name="SPISOK">Список дел</string>
    <string name="SPISOK1">Список дел1</string>
    <string name="ALARM">Будильник</string>
    <string name="ALARM1">Будильник1</string>
    <string name="CALENDAR">Календарь</string>
    <string name="CALENDAR1">Календарь1</string>
    <string name="DOBAVKA">Добавить будильник</string>
    <string name="VREMYA1">07:30</string>
    <string name="VREMYA2">08:00</string>
    <string name="walk">Вечерний поход в кино</string>
    <string name="going_to_cinema">Идем в кино с коллегами!</string>
    <string name="date_cinema">10.02.2021</string>
    <string name="time_cinema">19:40</string>
    <string name="pickup_order">Забрать заказ Ozon</string>
    <string name="point_of_issue">Пунк выдачи на ул. Ленина, 103</string>
    <string name="take_to_car_service">Сдать автомобиль в автосервис на ул.Бисертская, д. 14. Замена масла</string>
    <string name="write_in_car_service">Запись в автосервис</string>
    <string name="IZMENIT">Изменить задачу</string>
    <string name="OPISANIE">Описание задачи</string>
    <string name="ZAGOLOVOK">Заголовок задачи</string>
    <string name="DELETE">Удалить задачу</string>
    <string name="ZAPIS">Записать задачу</string>
    <string name="a">.</string>
    <string name="b">,</string>
    <string name="NEW">Добавить задачу</string>
    <string name="NEW2">Добавить будильник</string>
    <string name="ZOZ">Создать будильник</string>
    <string name="repa">Повторять каждый</string>
    <string name="n1">Понедельник</string>
    <string name="n2">Вторинк</string>
    <string name="n3">Среда</string>
    <string name="n4">Четверг</string>
    <string name="n5">Пятница</string>
    <string name="n6">Суббота</string>
    <string name="n7">Воскресенье</string>
    <string name="IZMENA">Изменить будильник</string>
    <string name="ZOHR">Сохранить будильник</string>
    <string name="DELITA">Удалить будильник</string>
</resources>